# overtake-detection

./: Cargo.toml  README.md  a.txt  combinad  combined.txt  config.yaml
server/: main.go
src/: color_analysis.rs  config.rs  debug.rs  frame_buffer.rs  inference.rs  interface.rs  lane_crossing.rs  lane_crossing_integration.rs  lane_detection.rs  lane_legality.rs  lane_legality_patches.rs  llm_client.rs  main.rs  overtake_analyzer.rs  overtake_detector.rs  overtake_tracker.rs  preprocessing.rs  remote_verification.rs  road_classification.rs  road_overlay.rs  shadow_overtake.rs  smoother.rs  types.rs  vehicle_detection.rs  video_processor.rs
src/analysis/: baseline_confidence.rs  boundary_detector.rs  curvature_estimator.rs  curve_detector.rs  ego_motion.rs  fallback_detector.rs  fallback_estimator.rs  inference_scheduler.rs  lane_analyzer.rs  lateral_detector.rs  maneuver_classifier.rs  maneuver_pipeline.rs  mod.rs  model_agreement.rs  pass_detector.rs  polynomial_tracker.rs  polynomial_tracker_integration.rs  position_estimator.rs  state_machine.rs  vehicle_tracker.rs  velocity_tracker.rs
src/analysis/adaptive/: context_detector.rs  mining_profiles.rs  mod.rs  thresholds.rs
src/detection/: lane_smoother.rs  mod.rs  position_calculator.rs  smoother.rs  state_machine.rs  types.rs
src/pipeline/: event_bus.rs  frame_context.rs  legality_buffer.rs  metrics.rs  mod.rs
